<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">applib1</string>
    <string name="choose_stock" tools:ignore="MissingTranslation">自选股</string>
    <string name="stock_name_code" tools:ignore="MissingTranslation">名称代码</string>
    <string name="updown" tools:ignore="MissingTranslation">涨跌幅</string>
    <string name="newly_price" tools:ignore="MissingTranslation">最新价</string>
    <string name="diff_price" tools:ignore="MissingTranslation">跌涨价</string>
    <string name="all_stock" tools:ignore="MissingTranslation">全部</string>
    <string name="hk_stock" tools:ignore="MissingTranslation">港股</string>
    <string name="sh_stock" tools:ignore="MissingTranslation">沪深</string>
    <string name="add_choose_stock" tools:ignore="MissingTranslation">添加自选股</string>
    <string name="see_more" tools:ignore="MissingTranslation">查看更多</string>
    <string name="add_topic_successful" tools:ignore="MissingTranslation">添加成功</string>
    <string name="more_operation" tools:ignore="MissingTranslation">更多操作请注册</string>
    <string name="open_accout" tools:ignore="MissingTranslation">立即注册</string>
    <string name="sticky_on_top" translatable="false">置顶</string>
    <string name="sticky_on_top_successful" tools:ignore="ExtraTranslation,MissingTranslation">置顶成功</string>
    <string name="remind" translatable="false">提醒</string>
    <string name="delete" translatable="false">删除</string>
    <string name="delete_successful" tools:ignore="ExtraTranslation,MissingTranslation">删除成功</string>
    <string name="all_stock_num" tools:ignore="MissingTranslation">全部(%1$d)</string>
    <string name="hk_stock_num" tools:ignore="MissingTranslation">港股(%1$d)</string>
    <string name="hs_stock_num" tools:ignore="MissingTranslation">沪深(%1$d)</string>
    <string name="unable_notice" translatable="false">消息通知已关闭，无法接收提醒推送</string>
    <string name="open_notice" translatable="false">去开启</string>
    <string name="setting_remind" translatable="false">设置提醒</string>
    <string name="rise_threshold" translatable="false">价格涨到</string>
    <string name="down_threshold" translatable="false">价格跌到</string>
    <string name="rise_range" translatable="false">涨幅超</string>
    <string name="down_range" translatable="false">跌幅超</string>
    <string name="str_no_position_present" translatable="false">暂无持仓</string>
    <string name="str_no_record_historical_transactions" translatable="false">暂无历史交易记录哦</string>
    <string name="str_hold_positions" translatable="false">持仓</string>
    <string name="str_today_orders" translatable="false">今日订单</string>
    <string name="str_no_order" translatable="false">暂无订单</string>
    <string name="str_agiotage" translatable="false">买卖股票</string>
    <string name="str_quote" translatable="false">行情报价</string>
    <string name="str_position_stock" translatable="false">持仓股票</string>
    <string name="str_market_value_and_quantity" translatable="false">市值/数量</string>
    <string name="str_present_price_and_cost" translatable="false">现价/成本</string>
    <string name="str_opsition_gain_and_loss" translatable="false">持仓盈亏</string>
    <string name="str_change_order" translatable="false">改单</string>
    <string name="str_cancel_order" translatable="false">撤单</string>
    <string name="str_order_status" translatable="false">订单状态</string>
    <string name="str_name_code" translatable="false">名称代码</string>
    <string name="str_quantity_and_order_price" translatable="false">数量/订单价</string>
    <string name="str_order_time" translatable="false">下单时间</string>
    <string name="str_total_account_assets_hkd" translatable="false">账户总资产（港元）</string>
    <string name="str_today_profit_loss" translatable="false">当日盈亏</string>
    <string name="str_market_capitalization" translatable="false">持仓市值</string>
    <string name="str_available_funds" translatable="false">可用资金</string>
    <string name="str_total_profit_loss" translatable="false">总盈亏金额</string>
    <string name="str_historical_order" translatable="false">历史订单</string>
    <string name="str_rule" translatable="false">规则</string>
    <string name="str_zr_no" translatable="false">卓锐号</string>
    <string name="str_create_immediately" translatable="false">立即创建</string>
    <string name="str_create_account" translatable="false">创建账户</string>
    <string name="create_account_desc" translatable="false">立即获得100万元港币模拟资金</string>
    <string name="create_account_desc_bule" translatable="false">100万</string>
    <string name="mock_stock_rule" translatable="false">1、模拟交易只针对港股市场，初始资产为100万港元。\n
        2、港股市场交易品种仅限于在香港交易所上市的正股， 其他品种暂时不可交易。\n
        3、港股市场交易时间：9:30~12:00,13:00~16:00.\n
        4、模拟交易暂不支持分红、送股、申购新股、供股和增发等操作。 \n
        5、为避免出现虚假交易，模拟交易参照了实时行情量价撮合结果。\n
        6、模拟交易系统与真实股市行情不完全一致，有关数据以模拟交易系统为准。\n
        7、如上市公司因任何原因被除牌，但用户持有该公司的虚拟股票，用户不能再进行该股票的模拟交易，系统将按该股票的最后收市价，于第二个工作日将虚拟资金存入用户的模拟交易账户。\n
        8、本交易系统为卓锐证券研发，每笔模拟交易将收取0.1097%成交额和每笔成交0.50港元的虚拟资金作为代收费(代收费项目，全部以交易所及政府收费为准，具体查看交易所网站点击查看)。若与真实市场有细微出入,以模拟盘交易系统为准。\n
    </string>
    <string name="str_click_view" translatable="false">点击查看</string>
    <string name="mock_stock_copyright" translatable="false">关于模拟炒股的最终解释权，归卓锐证券所有。</string>
    <string name="str_simulated_trading_rules" translatable="false">模拟交易规则</string>
    <string name="simulation_trading_stocks" translatable="false">模拟炒股</string>
    <string name="simulation_trading_stocks_tips" translatable="false">模拟炒港股练习</string>
    <string name="str_type" translatable="false">类型</string>
    <string name="price_limit" translatable="false">限价单（增强）</string>
    <string name="stock_code" translatable="false">代码</string>
    <string name="stock_code_input_hint" translatable="false">请输入股票代码或简称</string>
    <string name="buy_count_more_than_max" translatable="false">买入数量超出最大可买数量</string>
    <string name="sell_count_more_than_max" translatable="false">输入数量超出最大可卖数量</string>
    <string name="count_more_than_max" translatable="false">输入数量超出最大可买可卖数量</string>
    <string name="count_invalid" translatable="false">每手数量不匹配</string>
    <string name="price" translatable="false">价格</string>
    <string name="number" translatable="false">数量</string>
    <string name="money" translatable="false">金额</string>
    <string name="max_buy_num" translatable="false">最大可买</string>
    <string name="max_sell_num" translatable="false">最大可卖</string>
    <string name="str_buy" translatable="false">买入</string>
    <string name="str_sell" translatable="false">卖出</string>
    <string name="str_cancel_change_order" translatable="false">取消改单</string>
    <string name="str_confirm_change_order" translatable="false">确定改单</string>
    <string name="hint_stock_code_or_abbreviation" translatable="false">请输入股票代码/简称</string>
    <string name="str_my_own_choice" translatable="false">我的自选</string>
    <string name="str_search_history" translatable="false">搜索历史</string>
    <string name="str_no_data" translatable="false">暂无数据</string>
    <string name="str_clear_record" translatable="false">清除记录</string>
    <string name="trans_buy1" translatable="false">买1</string>
    <string name="trans_buy2" translatable="false">买2</string>
    <string name="trans_buy3" translatable="false">买3</string>
    <string name="trans_buy4" translatable="false">买4</string>
    <string name="trans_buy5" translatable="false">买5</string>
    <string name="trans_sell1" translatable="false">卖1</string>
    <string name="trans_sell2" translatable="false">卖2</string>
    <string name="trans_sell3" translatable="false">卖3</string>
    <string name="trans_sell4" translatable="false">卖4</string>
    <string name="trans_sell5" translatable="false">卖5</string>
    <string name="hot_search_stock" tools:ignore="MissingTranslation">热搜股</string>
    <string name="search_history_stock" tools:ignore="MissingTranslation">历史搜索股票</string>
    <string name="cancle" tools:ignore="MissingTranslation">取消</string>
    <string name="search_tips" tools:ignore="MissingTranslation">请输入股票名称/代码/全拼</string>
    <string name="stock_search_all" tools:ignore="MissingTranslation">综合</string>
    <string name="stock_search_topic" tools:ignore="MissingTranslation">股票</string>
    <string name="stock_search_info" tools:ignore="MissingTranslation">资讯</string>
    <string name="str_tips" translatable="false">提示</string>
    <string name="str_retry" translatable="false">重试</string>
    <string name="str_back" translatable="false">返回</string>
    <string name="create_fund_account_success" translatable="false">恭喜您已获得100万港币模拟资金开始模拟炒股吧！</string>
    <string name="str_understood" translatable="false">已了解</string>
    <string name="getdata_err" translatable="false">获取数据失败</string>
    <string name="see_more_stock" tools:ignore="MissingTranslation">查看更多股票</string>
    <string name="see_more_infomation" tools:ignore="MissingTranslation">查看更多相关资讯</string>
    <string name="order_detail_title" translatable="false">订单明细</string>
    <string name="order_detail_account" translatable="false">账号：港股模拟练习（%1$s）</string>
    <string name="order_detail_type_buy" translatable="false">方向：买入</string>
    <string name="order_detail_type_sell" translatable="false">方向：卖出</string>
    <string name="order_detail_stock" translatable="false">名称：%s</string>
    <string name="order_detail_price" translatable="false">价格：%s</string>
    <string name="order_detail_count" translatable="false">数量：%s</string>
    <string name="order_detail_commission" translatable="false">佣金：%s</string>
    <string name="order_detail_money" translatable="false">金额：%s</string>
    <string name="buy_stocks_successful" translatable="false">下单成功</string>
    <string name="see_details" translatable="false">查看详情</string>
    <string name="tips" translatable="false">提示</string>
    <string name="loading_data" translatable="false">正在加载数据..</string>
    <string name="str_confirm" translatable="false">确认</string>
    <string name="str_cancel" translatable="false">取消</string>
    <string name="str_confirm_withdrawal" translatable="false">请您确认是否撤单</string>
    <string name="str_trust_success" translatable="false">撤单成功</string>
    <string name="save_set" tools:ignore="MissingTranslation">保存</string>
    <string name="down_setting_tips" tools:ignore="MissingTranslation">目标价要低于现价</string>
    <string name="up_setting_tips" tools:ignore="MissingTranslation">目标价要高于现价</string>
    <string name="up_rate_tips" tools:ignore="MissingTranslation">目标涨幅要大于0</string>
    <string name="down_rate_tips" tools:ignore="MissingTranslation">目标跌幅要大于0</string>
    <string name="compare_price_up" tools:ignore="MissingTranslation">较当前价上涨</string>
    <string name="compare_price_down" tools:ignore="MissingTranslation">较当前价下跌</string>
    <string name="compare_price_to" tools:ignore="MissingTranslation">股价到</string>
    <string name="plaease_input_num" tools:ignore="MissingTranslation">请先输入数值</string>
    <string name="delete_topic_stock_tips" translatable="false">确定删除该自选股票</string>
    <string name="no_rehabilitation">不复权</string>
    <string name="kline_day">分时</string>
    <string name="kline_five_day">五日</string>
    <string name="kline_days">日K</string>
    <string name="kline_weeks">周K</string>
    <string name="kline_months">月K</string>
    <string name="kline_year">年K</string>
    <string name="kline_minute_5">5分</string>
    <string name="kline_minute_15">15分</string>
    <string name="kline_minute_30">30分</string>
    <string name="kline_minute_60">60分</string>
    <string name="company_manager_label">高管</string>
    <string name="manager_jobtitle">职务</string>
    <string name="manager_salary">年薪(币种：HKD)</string>
    <string name="shareholder_name">股东名称</string>
    <string name="shareholder_change_number">变动(股)</string>
    <string name="shareholder_number">持股数(股)</string>
    <string name="date">日期</string>
    <string name="exemption_date">除权除息日</string>
    <string name="dividend_date">派息日</string>
    <string name="allocation_plan">分配方案</string>
    <string name="repo_number">数量(股)</string>
    <string name="repo_price">均价(元)</string>
</resources>