<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/dialog_bg"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_detail_title"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="@color/color_282828"
            android:textSize="18sp"/>

    <TextView
            android:id="@+id/tv_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_detail_account"
            android:textColor="@color/color_282828"
            android:layout_marginTop="23dp"
            android:textSize="15sp"/>

    <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_detail_type_buy"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_282828"
            android:textSize="15sp"/>

    <TextView
            android:id="@+id/tv_stock_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/order_detail_stock"
            android:textColor="@color/color_282828"
            android:textSize="15sp"/>

    <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/order_detail_price"
            android:textColor="@color/color_282828"
            android:textSize="15sp"/>

    <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/order_detail_count"
            android:textColor="@color/color_282828"
            android:textSize="15sp"/>

    <TextView
            android:id="@+id/tv_commission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/order_detail_commission"
            android:textColor="@color/color_282828"
            android:textSize="15sp"/>

    <TextView
            android:id="@+id/tv_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/order_detail_money"
            android:textColor="@color/color_282828"
            android:textSize="15sp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_height="33dp">

        <com.zhuorui.commonwidget.StateButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/cancle"
                android:gravity="center"
                app:normalStrokeWidth="1dp"
                app:pressedStrokeWidth="1dp"
                android:minHeight="0dp"
                android:padding="0dp"
                app:radius="3dp"
                android:textStyle="bold"
                app:normalStrokeColor="@color/color_616161"
                app:pressedStrokeColor="@color/color_616161"
                android:textColor="@color/color_000000"
                android:textSize="17sp"/>

        <com.zhuorui.commonwidget.StateButton
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/ensure"
                android:layout_marginStart="25dp"
                style="@style/btnStyle"
                android:textSize="17sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>