<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_manager_label"
            android:textColor="@color/color_ffa4b2cb"
            android:textSize="14sp"
            android:layout_marginStart="13dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manager_jobtitle"
            android:textColor="@color/color_ffa4b2cb"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="162.5dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manager_salary"
            android:textColor="@color/color_ffa4b2cb"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="13dp"/>
</RelativeLayout>