<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

    <TextView
            android:id="@+id/tv_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/color_ffa4b2cb"
            android:textSize="14sp"
            android:layout_marginStart="13dp"/>

    <TextView
            android:id="@+id/tv_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repo_number"
            android:textColor="@color/color_ffa4b2cb"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="177dp"/>

    <TextView
            android:id="@+id/tv_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repo_price"
            android:textColor="@color/color_ffa4b2cb"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="13dp"/>
</RelativeLayout>