<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:ignore="MissingDefaultResource">
    <data>
        <variable
                name="viewModel"
                type="com.zhuorui.securities.market.ui.viewmodel.SimulationTradingRuleViewModel"/>
    </data>

    <LinearLayout
            android:orientation="vertical"
            android:background="#f0f0f0"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.zhuorui.commonwidget.MoreIconTitleBar
                android:id="@+id/top_bar"
                style="@style/SimulationTradingTitleBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:zr_topbarTitle="@string/simulation_trading_stocks"
        />

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:paddingLeft="13dp"
                    android:paddingRight="13dp"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#232323"
                        android:textSize="19sp"
                        android:layout_marginTop="12dp"
                        android:text="@string/str_simulated_trading_rules"
                />

                <TextView
                        android:id="@+id/rule"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:lineSpacingMultiplier="1.5"
                        android:textSize="14sp"
                        android:textColor="@color/color_232323"
                        android:text="@string/mock_stock_rule"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="54dp"
                        android:layout_marginBottom="15dp"
                        android:textColor="@color/color_A1A1A1"
                        android:textSize="13sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/mock_stock_copyright"

                />
            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</layout>